--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -12,13 +12,10 @@
     },
     "aboutUs": {
         "title": "About Me",
-        "paragraph1": "I'm Pablo, Argentinean born on August 12, 1988 in Buenos Aires. I live in Balneario Camboriú, Brazil, since early 2022 and I work as a Front-End developer. I am passionate about growing in the world of technology, I am responsible, self-taught, proactive and enjoy working in a team to learn and solve challenges.",
-        "paragraph3": "I use languages such as HTML, CSS and JavaScript, and for styling I use Tailwind CSS and Bootstrap. With these tools, I create modern and responsive interfaces, focusing on offering efficient and attractive solutions to improve the user experience.",
-        "paragraph4": "I use advanced technologies such as Next.js frameworks for server-side rendering (SSR) and Angular, as well as the React.js library. I also use Firebase for database storage. I use project management and version control tools, with Git being a fundamental part of my workflow.",
-        "paragraph5": "In addition to my development experience, I am familiar with content management systems (CMS) such as Webflow and WordPress. This allows me to provide comprehensive and customized solutions that fit the specific content and administration needs of my clients.",
-        "paragraph6": "Currently, I am expanding my knowledge towards backend development, where I am specializing in Java and Spring Boot. This allows me to complement my front-end skills with the ability to develop complete, robust and scalable applications, improving my competencies as an integral developer.",
-        "paragraph7": "In addition, I am exploring the world of cloud computing, gaining experience in platforms such as Oracle Cloud Infrastructure (OCI) and AWS. These tools allow me to optimize infrastructure and resource management, integrating cloud solutions that improve the performance and scalability of projects.",
-        "paragraph8": "In parallel, I am dabbling in testing automation, using tools like JUnit and Selenium for automated testing in Java, and Playwright and Cypress for front-end testing with JavaScript. This helps me to ensure the quality and stability of applications in continuous development environments."
+        "paragraph1": "I'm Pablo, Argentinean born on August 12, 1988 in Buenos Aires. I live in Santa Catarina, Brazil, since early 2022 and I work as a Front-End developer. I am passionate about growing in the world of technology, I am responsible, self-taught, proactive and enjoy working in a team to learn and solve challenges.",
+        "paragraph2": "I use languages such as HTML, CSS and JavaScript, and for styling I use Tailwind CSS and Bootstrap. With these tools, I create modern and responsive interfaces, focusing on offering efficient and attractive solutions to improve the user experience.",
+        "paragraph3": "I use advanced technologies such as Next.js frameworks for server-side rendering (SSR) and Angular, as well as the React.js library. I also use Firebase for database storage. I use project management and version control tools, with Git being a fundamental part of my workflow.",
+        "paragraph4": "In addition, I am exploring the world of cloud computing, gaining experience in platforms such as Azure and AWS. These tools allow me to optimize infrastructure and resource management, integrating cloud solutions that improve the performance and scalability of projects."
     },
     "mySkills": {
         "title": "My Skills"
